<?xml version="1.0"?>
<package>
    <name>SRBProject</name>
    <version>0.0.0</version>
    <description>The SRBProject package</description>

    <maintainer email="nanahoshi.931@gmail.com">Nanahoshi23</maintainer>
    <license>BSD</license>
    <author email="nanahoshi.931@gmail.com">Nanahoshi23</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>transmission_interface</build_depend>
    <build_depend>controller_manager</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>hardware_interface</run_depend>
    <run_depend>transmission_interface</run_depend>
    <run_depend>controller_manager</run_depend>

    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
    <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>gazebo_ros</run_depend>

    <export>
        <!-- The export tag contains other, unspecified, tags -->
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros gazebo_model_path="${prefix}/worlds"/>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>

</package>
